--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,47 +14,48 @@
   <div class="row">
     <div class="col-md-12">
       <ng-container *ngIf="empArray.length > 0">
-
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Sr No</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Contact</th>
-              <th>Email</th>
-              <th>Age</th>
-              <th>Gender</th>
-              <th>Salary</th>
-              <th>Notic Period</th>
-              <th>Action</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let obj of empArray | filter : searchVal;index as i">
-              <td>{{i + 1}}</td>
-              <td>{{obj.fname}}</td>
-              <td>{{obj.lname}}</td>
-              <td>{{obj.contact}}</td>
-              <td>
-                <p *ngFor="let em of obj.email, index as i">
-                  {{i + 1 }}: {{em}}
-                </p>
-              </td>
-              <td>{{obj.age}}</td>
-              <td>{{obj.gender}}</td>
-              <td>{{obj.salary}}</td>
-              <td>{{obj.noticPeriod}}</td>
-              <td><button mat-mini-fab (click)="onEdit(obj)">
-                  <mat-icon>edit</mat-icon>
-                </button></td>
-              <td><button mat-mini-fab (click)="onDelete(i)" color="warn">
-                  <mat-icon>delete</mat-icon>
-                </button></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>Sr No</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Contact</th>
+                <th>Email</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Salary</th>
+                <th>Notic Period</th>
+                <th>Action</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let obj of empArray | filter : searchVal;index as i">
+                <td>{{i + 1}}</td>
+                <td>{{obj.fname}}</td>
+                <td>{{obj.lname}}</td>
+                <td>{{obj.contact}}</td>
+                <td>
+                  <p *ngFor="let em of obj.email, index as i">
+                    {{i + 1 }}: {{em}}
+                  </p>
+                </td>
+                <td>{{obj.age}}</td>
+                <td>{{obj.gender}}</td>
+                <td>{{obj.salary}}</td>
+                <td>{{obj.noticPeriod}}</td>
+                <td><button mat-mini-fab (click)="onEdit(obj)">
+                    <mat-icon>edit</mat-icon>
+                  </button></td>
+                <td><button mat-mini-fab (click)="onDelete(i)" color="warn">
+                    <mat-icon>delete</mat-icon>
+                  </button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </ng-container>
       <ng-container *ngIf="empArray.length <= 0">
         <h3>There is No Data Saved in Local Storage !!! ..... you can Add Employee</h3>
